# ssdp-responder

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  Makefile.am  README.md  TODO.md  check.sh  cksum.c  configure.ac  lssdp.c  lssdp.h  ssdp.h  ssdpd.1  ssdpd.8  ssdpd.c  ssdpd.service.in  web.c
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: build.yml  coverity.yml  release.yml
debian/: .gitignore  changelog  control  copyright  init.d  rules  ssdp-scan.install  ssdpd.install  watch
lib/: pidfile.c  utimensat.c
man/: Makefile.am  ssdp-scan.1  ssdpd.8
src/: .gitignore  Makefile.am  compat.h  netlink.c  ssdp-scan.c  ssdp.c  ssdp.h  ssdpd.c  uget.c  web.c
